--- a/package.json
+++ b/package.json
@@ -17,8 +17,5 @@
   "bugs": {
     "url": "https://github.com/codingwith3dv/interfaz/issues"
   },
-  "homepage": "https://github.com/codingwith3dv/interfaz#readme", 
-  "dependencies": {
-    "typescript": "^4,2,4"
-  }
+  "homepage": "https://github.com/codingwith3dv/interfaz#readme"
 }
