--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/codingwith3dv/interfaz/issues"
   },
-  "homepage": "https://github.com/codingwith3dv/interfaz#readme"
+  "homepage": "https://github.com/codingwith3dv/interfaz#readme",
+  "devDependencies": {
+    "typescript": "^4.2.4"
+  }
 }
