--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.5",
   "description": "A component based UI library used for making user interfaces",
   "scripts": {
-    "test": "tsc"
+    "test": "tsc",
+    "build": "rollup ./dist/index.js --file ./build/bundle.js --format iife"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/codingwith3dv/interfaz#readme",
   "devDependencies": {
+    "rollup": "^2.47.0",
     "typescript": "^4.2.4"
   }
 }
