--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nueva",
-  "version": "0.0.2-alpha03",
+  "version": "0.0.3",
   "main": "index.js",
   "description": "A component based UI library used for making user interfaces",
   "scripts": {
