--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "description": "A component based UI library used for making user interfaces",
   "scripts": {
     "dev": "node ./scripts/dev.js",
-    "build": "node ./scripts/build-rollup.js",
-    "prettier": "node ./scripts/prettify-script.js"
+    "build": "node ./scripts/build-rollup.js"
   },
   "repository": {
     "type": "git",
@@ -23,8 +22,6 @@
   "homepage": "https://github.com/codingwith3dv/nueva#readme",
   "devDependencies": {
     "rollup": "^2.50.0",
-    "typescript": "^4.2.4",
-    "glob": "^7.1.7",
-    "prettier": "^2.3.0"
+    "typescript": "^4.2.4"
   }
 }
