--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "description": "A component based UI library used for making user interfaces",
   "scripts": {
-    "dev": "node ./scripts/dev.js",
+    "dev": "node ./node_modules/typescript/bin/tsc -w",
     "build": "node ./scripts/build-rollup.js"
   },
   "repository": {
