🌍 Feat: add dom el reference to VElement

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "watch": false,
     "sourceMap": false,
     "outDir": "./dist",
+    "declarationDir": "./types",
     "suppressImplicitAnyIndexErrors": true,
     "moduleResolution": "node",
     "esModuleInterop": true,
