--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "nueva",
   "version": "0.0.8",
   "main": "index.js",
+  "typings": "./types/index.d.ts",
   "description": "A component based UI library used for making user interfaces",
   "scripts": {
     "dev": "node ./node_modules/typescript/bin/tsc -w",
