--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nueva",
-  "version": "0.0.9-full",
+  "version": "0.1.0",
   "main": "index.js",
   "typings": "./types/index.d.ts",
   "description": "A component based UI library used for making user interfaces",
