--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "nueva",
   "version": "0.1.1",
-  "main": "index.js",
-  "typings": "./types/index.d.ts",
+  "main": "/dist/nueva.common.js",
+  "module": "/dist/nueva.es.js",
+  "unpkg": "/dist/nueva.es.js",
+	"typings": "./types/index.d.ts",
   "description": "A component based UI library used for making user interfaces",
   "scripts": {
     "dev": "node ./node_modules/typescript/bin/tsc -w",
